# digital-twin-of-your-organization

./: GEMINI.md  Makefile  README.md
.claude/commands/: speckit.specify.md
.gemini/commands/: speckit.specify.toml
.specify/scripts/bash/: common.sh  create-new-feature.sh
.specify/templates/: plan-template.md  tasks-template.md
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: ChatPanel.tsx
client/src/game/: PhaserGame.tsx
client/src/services/: api.ts
client/src/stores/: useAgentStore.ts
docs/feature/001-initial-architecture/: plan.md  spec.md  tasks.md
docs/feature/002-agent-chat/: plan.md  spec.md  tasks.md
server/: pyproject.toml
server/app/: main.py
server/app/agents/: loader.py  models.py
server/app/api/: routes.py
server/app/chat/: models.py  service.py
server/app/core/: config.py
server/data/agents/001/: goal.md  memory.md  soul.md  values.md
